chore: fix scss imports

--- a/src/components/BaseButton/button.scss
+++ b/src/components/BaseButton/button.scss
@@ -7,7 +7,7 @@
     tw-transition-all
     tw-ease-in-out
     tw-duration-300
-    tw-whitespace-no-wrap;
+    tw-whitespace-nowrap;
 
   &:hover {
     /** Reset links buttons */
